# airtable-mcp-server-oauth

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  test_oauth_mcp.py  test_simplified_oauth.py
.github/workflows/: ci.yml  pr-coverage.yml
docs/: airtable-api-client-specification.md  airtable-oauth-mcp-project-tracker.md  airtable-oauth2-flow-documentation.md  dynamic-client-registration.md
src/airtable_mcp/: __init__.py  __main__.py  main.py
src/airtable_mcp/api/: __init__.py  client.py  exceptions.py  models.py
src/airtable_mcp/mcp/: __init__.py  schemas.py  server.py
src/mcp_oauth_lib/: __init__.py
src/mcp_oauth_lib/auth/: __init__.py  context.py  middleware.py  utils.py
src/mcp_oauth_lib/core/: __init__.py  config.py  flow.py  server.py
src/mcp_oauth_lib/providers/: __init__.py  airtable.py  base.py
src/mcp_oauth_lib/utils/: __init__.py  pkce.py  state.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_airtable_client.py  test_airtable_provider.py  test_api_models.py  test_basic_coverage.py  test_exceptions.py  test_main.py  test_mcp_server.py  test_oauth_handler.py  test_oauth_utils.py  test_schemas.py  test_token_manager.py
tests/unit/mcp_oauth_lib/: __init__.py
tests/unit/mcp_oauth_lib/auth/: __init__.py  test_context.py
tests/unit/mcp_oauth_lib/core/: __init__.py  test_config.py
tests/unit/mcp_oauth_lib/providers/: __init__.py  test_airtable_simple.py
tests/unit/mcp_oauth_lib/utils/: __init__.py  test_pkce.py
